# waybar-workspace-taskbar

./: .clang-format  .envrc  .gitignore  LISCENSE  Makefile  README.md  compile_commands.json  flake.nix  meson.build
.byte/: .gitignore  config.jsonc
src/: main.c  wbcffi.h
src/core/: app.c  app.h  cache.c  cache.h  config.c  config.h  services.c  services.h  utils.c  utils.h  window_manager.c  window_manager.h  window_manager_data.c  window_manager_data.h  window_manager_events.c  window_manager_events.h  window_manager_spec.c  window_manager_spec.h
src/services/: app_icons.c  app_icons.h  window_manager_events.c  window_manager_events.h  window_manager_spec.c  window_manager_spec.h
src/services/window_manager/: data.c  data.h  events.c  events.h  subscriptions.c  subscriptions.h  window_manager.c  window_manager.h
src/utils/: cmd.c  cmd.h  common.c  common.h  socket.c  socket.h
src/widgets/: navigation_btn.c  navigation_btn.h  overflow_btn.c  overflow_btn.h  tab.c  tab.h  tabs.c  tabs.h  taskbar.c  taskbar.h
src/window_managers/: common.c  common.h  hyprland.c  hyprland.h  niri-cp-working.c  niri-cp.c  niri.c  niri.h  sway-cp.c  sway.c  sway.h
